--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-device-info": "^0.9.3",
     "react-native-google-analytics-bridge": "^3.1.0",
     "react-native-i18n": "^0.1.1",
+    "react-native-parallax-scroll-view": "^0.19.0",
     "react-native-swiper": "^1.4.11",
     "react-redux": "^4.4.5",
     "realm": "^0.14.1",
