--- a/ios/AndyWarholAccessibilityProject/Info.plist
+++ b/ios/AndyWarholAccessibilityProject/Info.plist
@@ -34,9 +34,9 @@
 		<true/>
 	</dict>
 	<key>NSBluetoothPeripheralUsageDescription</key>
-	<string>The Warhol uses bluetooth to figure out your location and show you stories close by.</string>
+	<string>The Nordic Museum Audio Guide uses bluetooth to figure out your location and show nearby highlights and themes.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>The Warhol uses your location to show you stories close by.</string>
+	<string>The Nordic Museum Audio Guide uses your location to show you nearby highlights and themes.</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
@@ -47,5 +47,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>StringsTable</key>
+	<string>Root</string>
 </dict>
 </plist>
