--- a/ios/AndyWarholAccessibilityProject/Info.plist
+++ b/ios/AndyWarholAccessibilityProject/Info.plist
@@ -46,6 +46,7 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
