--- a/v2/package.json
+++ b/v2/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "start": "react-native start",
+    "run-ios": "react-native run-ios",
+    "run-android": "react-native run-android",
     "test": "jest",
     "lint": "eslint ."
   },
