--- a/v2/package.json
+++ b/v2/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "16.8.6",
     "react-native": "0.60.5",
-    "react-native-navigation": "3.1.1"
+    "react-native-collapsible": "^1.5.1",
+    "react-native-navigation": "3.1.1",
+    "react-native-parallax-scroll-view": "^0.21.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
