--- a/v2/package.json
+++ b/v2/package.json
@@ -15,7 +15,11 @@
     "react-native-collapsible": "^1.5.1",
     "react-native-navigation": "3.1.1",
     "react-native-parallax-scroll-view": "^0.21.3",
-    "react-native-simple-markdown": "^1.1.0"
+    "react-native-simple-markdown": "^1.1.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -23,11 +27,25 @@
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
     "eslint": "^6.2.1",
+    "husky": ">=1",
     "jest": "^24.9.0",
+    "lint-staged": ">=8",
     "metro-react-native-babel-preset": "^0.56.0",
+    "prettier": "1.18.2",
     "react-test-renderer": "16.8.6"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,css,json,md}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
