--- a/v2/package.json
+++ b/v2/package.json
@@ -25,6 +25,9 @@
     "@babel/core": "^7.5.5",
     "@babel/runtime": "^7.5.5",
     "@react-native-community/eslint-config": "^0.0.5",
+    "appcenter": "2.3.0",
+    "appcenter-analytics": "2.3.0",
+    "appcenter-crashes": "2.3.0",
     "babel-jest": "^24.9.0",
     "eslint": "^6.2.1",
     "husky": ">=1",
