--- a/v2/android/app/build.gradle
+++ b/v2/android/app/build.gradle
@@ -189,6 +189,7 @@ android {
 }
 
 dependencies {
+    implementation project(':realm')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
