--- a/v2/android/settings.gradle
+++ b/v2/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'nordicMuseumAudioGuide'
+include ':realm'
+project(':realm').projectDir = new File(rootProject.projectDir, '../node_modules/realm/android')
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 
 include ':react-native-navigation'
