--- a/v2/package.json
+++ b/v2/package.json
@@ -21,6 +21,7 @@
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-simple-markdown": "^1.1.0",
     "react-redux": "^7.1.1",
+    "realm": "^3.1.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
