Converting Google Sheets to data json files, and importing into app with realm

--- a/v2/ios/Podfile
+++ b/v2/ios/Podfile
@@ -28,6 +28,8 @@ target 'nordicMuseumAudioGuide' do
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
 
+  pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
+
   target 'nordicMuseumAudioGuideTests' do
     inherit! :search_paths
     # Pods for testing
