--- a/v2/package.json
+++ b/v2/package.json
@@ -16,11 +16,13 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-collapsible": "^1.5.1",
+    "react-native-device-info": "^3.1.4",
     "react-native-localize": "^1.2.0",
     "react-native-navigation": "3.1.1",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-simple-markdown": "^1.1.0",
     "react-redux": "^7.1.1",
+    "realm": "^3.1.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
