--- a/v2/package.json
+++ b/v2/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "postinstall": "patch-package",
     "start": "react-native start",
     "run-ios": "react-native run-ios",
     "run-android": "react-native run-android",
@@ -40,6 +41,8 @@
     "jest": "^24.9.0",
     "lint-staged": ">=8",
     "metro-react-native-babel-preset": "^0.56.0",
+    "patch-package": "^6.2.0",
+    "postinstall-postinstall": "^2.0.0",
     "prettier": "1.18.2",
     "react-test-renderer": "16.8.6"
   },
