--- a/v2/package.json
+++ b/v2/package.json
@@ -25,6 +25,7 @@
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-simple-markdown": "^1.1.0",
     "react-native-sound": "^0.11.0",
+    "react-native-status-bar-height": "^2.4.0",
     "react-redux": "^7.1.1",
     "realm": "^3.1.0",
     "redux": "^4.0.4",
