--- a/v2/package.json
+++ b/v2/package.json
@@ -42,6 +42,7 @@
     "appcenter-crashes": "2.3.0",
     "babel-jest": "^24.9.0",
     "eslint": "^6.2.1",
+    "eslint-plugin-prettier": "^3.1.1",
     "husky": ">=1",
     "jest": "^24.9.0",
     "jetifier": "^1.6.4",
