--- a/v2/package.json
+++ b/v2/package.json
@@ -24,6 +24,7 @@
     "react-native-device-info": "^3.1.4",
     "react-native-localize": "^1.2.0",
     "react-native-navigation": "3.1.1",
+    "react-native-restart": "0.0.13",
     "react-native-simple-markdown": "^1.1.0",
     "react-native-sound": "^0.11.0",
     "react-native-status-bar-height": "^2.4.0",
