--- a/v2/ios/nordicMuseumAudioGuide/Info.plist
+++ b/v2/ios/nordicMuseumAudioGuide/Info.plist
@@ -45,6 +45,10 @@
 	<string></string>
 	<key>NSLocationWhenInUseUsageDescription - 2</key>
 	<string>The Nordic Museum Audio Guide uses your location to show you nearby highlights and themes.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
